Renamed "registration.*" files to "register.*". Renamed CSS files to LESS. Fixed some whitespace.

--- a/achivki/main/static/less/base.less
+++ b/achivki/main/static/less/base.less
@@ -1,7 +1,10 @@
 @header_color: hsl(50, 40%, 90%);
 @header_bg_color: #444;
 @header_bg_color_light: lighten(@header_bg_color, 3%);
-@header_bg: -webkit-linear-gradient(bottom, @header_bg_color_light, @header_bg_color, @header_bg_color_light);
+@header_bg: -webkit-linear-gradient(bottom,
+                                    @header_bg_color_light,
+                                    @header_bg_color,
+                                    @header_bg_color_light);
 @header_border: #333;
 
 .header {
@@ -76,7 +79,7 @@
     font-family: Verdana;
     font-weight: bold;
     font-size: 10pt;
-    text-shadow: 1px -1px 0 black;
+    text-shadow: 0px -1px 0 black;
     padding-left: 0.5em;
 }
 
