--- a/achivki/main/static/less/default.less
+++ b/achivki/main/static/less/default.less
@@ -29,7 +29,3 @@ table.valign {
     border-spacing: 0;
     border-collapse: collapse;
 }
-
-div.o {
-    display: inline;
-}
